2001-06-07  James LewisMoss  <jimdres@mindspring.com>

	* doc/README.translator.txt (variables): add instructions for
	manual and account hierarchy files.

	* src/gnome/new-user-callbacks.c: fix test for commodity added by
	setting data on druid rather than a global variable (bad jim.
	global variable bad).
	(on_chooseAccountTypesPage_prepare): remove old comment.
	(on_chooseAccountTypesPage_prepare): set object data that account
	lists loaded.
	(on_chooseAccountTypesPage_prepare): use new func to determine
	locale dir.
	(gnc_get_ea_locale_dir): new func to determine locale correct dir
	to read account files from.

	* src/gnome/new-user-funs.c (gnc_get_new_user_dialog): new func.

	* src/gnome/new-user-callbacks.c (set_first_startup): simplify
	using the global-options.h func gnc_set_boolean_option.

	* src/FileDialog.c (gncFileNew): lookup pref and do or don't run
	new account list druid.

	* doc/sgml/C/image/Makefile.am (image_DATA): add new user images.

	* src/gnome/new-user-callbacks.c
	(on_newAccountCurrencyChoosePage_prepare): remove old comment.

	* doc/sgml/C/xacc-quickstart.sgml: add link to
	account-hierarchy-creator.

	* doc/sgml/C/Makefile.am (GNUCASH_SGML_FILES): add account
	hierarchy sgml file to list.

2001-06-07  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/gnucash-design.texinfo: update docs

	* src/doc/design/engine.texinfo: update docs

2001-06-06  Dave Peticolas  <dave@krondo.com>

	* src/scm/report-html.scm: remove unneeded (require 'printf).
	This is invoked as part of testing for slib > 2c4. For slib
	< 2c4, printf is loaded from slib-backup.scm.

2001-06-07  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-regwin.sgml: Chris "Wilddev" Lyttle's 
	register documentation update.

	* doc/sgml/C/image/MakeFile.am, autosplitledger.png,
	basicledger-transfer.png, basicledger.png editaccount.png,
	transactionjrnl.png: Wilddev's screenshots.

	* doc/sgml/C/xacc-toplevel.sgml, xacc-calculator.sgml,